backend/k8s/app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finote-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finote-backend
  template:
    metadata:
      labels:
        app: finote-backend
    spec:
      containers:
        - name: backend
          image: finote-backend-image
          ports:
            - containerPort: 3000

          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
