backend/k8s/app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finote-backend
  labels:
    app: finote-backend
spec:
  type: NodePort
  selector:
    app: finote-backend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      nodePort: 30083
