backend/k8s/app/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finote-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: apifinote.rakafitrap.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: finote-service
            port:
              number: 80
